--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About eVote India - Digital Voting Revolution</title>
+    <link rel="icon" href="./images/logo.png">
     <link rel="icon" href="">
     <link rel="stylesheet" href="./css/about.css">
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
