--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact & Support | e-Vote India</title>
+    <link rel="icon" href="./images/logo.png">
     <link rel="stylesheet" href="./css/contact.css">
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <script src="https://unpkg.com/feather-icons"></script>
