--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - BharatVote</title>
+    <link rel="icon" href="./images/logo.png">
     <link rel="stylesheet" href="./css/login.css">
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
